--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "makefile.compileCommandsPath": "C:/Users/krzys/OneDrive/STUDIA/V SEMESTR/PEA/PEA2/.vscode/compile_commands.json",
   "files.associations": {
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "ostream": "cpp",
+    "vector": "cpp"
   }
 }
