--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,9 @@
   "files.associations": {
     "iostream": "cpp",
     "ostream": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "array": "cpp",
+    "deque": "cpp",
+    "string_view": "cpp"
   }
 }
